

 
If you need to understand more MyCollab advanced configuration settings, please visit the link [http://wiki.mycollab.com/Configuration](http://wiki.mycollab.com/Configuration). You will finish reading and understanding in a matter of minutes.

Last changelog
==============

Version 4.5.2
-----------------------------
**Improvements**

* Upgrade libraries versions
* Tweak the error handling while init view
* Refactor the file module management
* Add more unit tests for crm, content, project services and use assertj instead of standard junit assert statements.
* Revise the localization and date format associate to locale. It helps external developers can translate MyCollab to other languages easily.

**Bug Fixes**

* Project Notification can not be sent in some special cases
* Search time logging throws exception in several special input cases
* Fix NPE exception when there is several options has null value

Version 4.5.1
-----------------------------
**Improvements**

* Upgrade Spring framework to 4.1.0.RELEASE
* Upgrade Vaadin libraries
* Adding scheduler unit tests
* Project page could be exported into pdf format
* Project time logging is displayed in multiple layouts
* User can add comment to project component and project version
* Validate project shortname is unique in account
* Make links of bug and task are readable
* Add tooltip to pretty time display

**Bug Fixes**

* Save task in task read view throws exception
* Inconsistent time logging permission
* Throws exception if user saves an empty search criteria
* Return redundant task element for empty task list
* Switch view causes the right widget in task, bug display in the wrong position

Version 4.5.0
-----------------------------
**Improvements**

* Upgrade libraries versions
* Revise project time tracking view
* Support version management in project page
* Support date format associate to user's locale
* Break mobile app into 2 sub apps: CRM and Project Management