@@ -59,7 +59,7 @@
     <!-- The packs section. We specify here our packs. -->
     <packs>
         <pack name="Base" required="yes">
-            <description>The MyCollab files</description>
+            <description>The MyCollab core files</description>
             <file src="conf" targetdir="$INSTALL_PATH" />
             <file src="lib" targetdir="$INSTALL_PATH" />
             <file src="logs" targetdir="$INSTALL_PATH" />
