@@ -4,6 +4,8 @@
     xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
     <id>mycollab-dist</id>
     <formats>
+        <format>tar.gz</format>
+        <format>tar.bz2</format>
         <format>zip</format>
         <format>dir</format>
     </formats>
