@@ -55,7 +55,7 @@ done
 PRGDIR=`dirname "$PRG"`
 
 # Only set MYCOLLAB_HOME if not already set
-[ -z "$MYCOLLAB_HOME" ] && MYCOLLAB_HOME=`cd "$PRGDIR" >/dev/null; pwd`
+[ -z "$MYCOLLAB_HOME" ] && MYCOLLAB_HOME=`cd "../$PRGDIR" >/dev/null; pwd`
 
 if [ -z "$MYCOLLAB_OUT" ] ; then
   MYCOLLAB_OUT="$MYCOLLAB_HOME"/logs/mycollab.out
@@ -159,7 +159,7 @@ if [ "$1" = "start" ] ; then
   shift
   touch "$MYCOLLAB_OUT"
   eval \"$_RUNJAVA\" $MYCOLLAB_OPTS \
-      -jar runner.jar --port $MYCOLLAB_PORT --stop-port 8079 --stop-key esoftheadsecretkey  
+      -jar $MYCOLLAB_HOME/runner.jar --port $MYCOLLAB_PORT --stop-port 8079 --stop-key esoftheadsecretkey  
  ####>> "$MYCOLLAB_OUT" 2>&1 "&"
 
   if [ ! -z "$MYCOLLAB_PID" ]; then
@@ -202,7 +202,7 @@ elif [ "$1" = "stop" ] ; then
     fi
   fi
 
-  eval \"$_RUNJAVA\" -jar runner.jar  --stop-port 8079 --stop-key esoftheadsecretkey --stop 
+  eval \"$_RUNJAVA\" -jar $MYCOLLAB_HOME/runner.jar  --stop-port 8079 --stop-key esoftheadsecretkey --stop 
 
   if [ ! -z "$MYCOLLAB_PID" ]; then
     if [ -f "$MYCOLLAB_PID" ]; then
