@@ -1,192 +1,0 @@
-MyCollab requires a Java Standard Edition Runtime
-Environment (JRE) version 7 or later.
-
-=============================
-Running With JRE 7 Or Later
-=============================
-
-(1) Download and Install a Java SE Runtime Environment (JRE)
-
-(1.1) Download a Java SE Runtime Environment (JRE),
-      release version 6 or later, from
-      http://www.oracle.com/technetwork/java/javase/downloads/index.html
-
-(1.2) Install the JRE according to the instructions included with the
-      release.
-
-      You may also use a full Java Development Kit (JDK) rather than just
-      a JRE.
-
-
-(2) Download and Install MyCollab
-
-(2.1) Download a binary distribution of MyCollab from:
-
-      http://www.mycollab.com
-
-(2.2) Unpack the binary distribution so that it resides in its own
-      directory (conventionally named "mycollab-[version]").
-
-      For the purposes of the remainder of this document, the name
-      "MYCOLLAB_HOME" is used to refer to the full pathname of that
-      directory.
-
-
-(3) Configure Environment Variables
-
-MyCollab is a Java application and does not use environment variables. The
-variables are used by the MyCollab startup scripts. The scripts use the variables
-to prepare the command that starts MyCollab.
-
-(3.1) Set MYCOLLAB_HOME (required)
-
-The MYCOLLAB_HOME environment variable should be set to the location of the
-root directory of the "binary" distribution of MyCollab.
-
-An example was given in (2.2) above.
-
-The MyCollab startup scripts have some logic to set this variable
-automatically if it is absent, based on the location of the startup script
-in *nix and on the current directory in Windows. That logic might not work
-in all circumstances, so setting the variable explicitly is recommended.
-
-
-(3.2) Set JRE_HOME or JAVA_HOME (required)
-
-These variables are used to specify location of a Java Runtime
-Environment or of a Java Development Kit that is used to start MyCollab.
-
-The JRE_HOME variable is used to specify location of a JRE. The JAVA_HOME
-variable is used to specify location of a JDK.
-
-Using JAVA_HOME provides access to certain additional startup options that
-are not allowed when JRE_HOME is used.
-
-If both JRE_HOME and JAVA_HOME are specified, JRE_HOME is used.
-
-
-(3.3) Other variables (optional)
-
-Other environment variables exist, besides the four described above.
-See the comments at the top of mycollab.bat or mycollab.sh scripts for
-the list and a description of each of them.
-
-One frequently used variable is MYCOLLAB_OPTS. It allows specification of
-additional options for the java command that starts MyCollab.
-
-See the Java documentation for the options that affect the Java Runtime
-Environment.
-
-See the "System Properties" page in the MyCollab Configuration Reference for
-the system properties that are specific to MyCollab.
-
-Another frequently used variable is MYCOLLAB_PID (on *nix only). It
-specifies the location of the file where process id of the forked MyCollab
-java process will be written. This setting is optional. It will enable the
-following features:
-
- *  better protection against duplicate start attempts and
- *  allows forceful termination of MyCollab process when it does not react to
-    the standard shutdown command.
-
-(4) Start Up MyCollab
-
-(4.1) MyCollab can be started by executing one of the following commands:
-
-  On Windows:
-
-      %MYCOLLAB_HOME%\bin\startup.bat
-
-    or
-
-      %MYCOLLAB_HOME%\bin\mycollab.bat start
-
-  On *nix:
-
-      $MYCOLLAB_HOME/bin/startup.sh
-
-    or
-
-      $MYCOLLAB_HOME/bin/mycollab.sh start
-      
-      
-(4.2) If you start MyCollab at the first time, MyCollab will ask you to enter database 
-information, email smtp information. Here are detail instruction of set up system 
-variables.
-
-(4.2.1)
-
-(4.2.2) MyCollab requires MySQL schema to run, so first you must create a new schema instance 
-in MySQL by typing `CREATE SCHEMA `mycollab` DEFAULT CHARACTER SET utf8mb4 ;`
-
-You need to give MyCollab your created database schema as well as username and password with sufficient
-permission allows MyCollab can set up data
-
-(4.2.3) MyCollab have many schedule jobs to send notification by email to you and members in your
- account, then it needs a SMTP account to do this job. This task is optional in case you want to 
- receive MyCollab notifications of your assignments and many more types of notification MyCollab 
- supported. 
- 
- 
-
-(4.3) After startup, the default web applications included with MyCollab will be
-      available by visiting:
-
-      http://localhost:8080/
-
-(4.4) Further information about configuring and running MyCollab can be found in
-      the documentation included here, as well as on the MyCollab web site:
-
-      http://www.mycollab.com/
-
-
-(5) Shut Down MyCollab
-
-(5.1) MyCollab can be shut down by executing one of the following commands:
-
-  On Windows:
-
-      %MYCOLLAB_HOME%\bin\shutdown.bat
-
-    or
-
-      %MYCOLLAB_HOME%\bin\mycollab.bat stop
-
-  On *nix:
-
-      $MYCOLLAB_HOME/bin/shutdown.sh
-
-    or
-
-      $MYCOLLAB_HOME/bin/mycollab.sh stop
-
-================
-Troubleshooting
-================
-
-There are only really 2 things likely to go wrong during the stand-alone
-MyCollab install:
-
-(1) The most common hiccup is when another web server (or any process for that
-    matter) has laid claim to port 8080.  This is the default HTTP port that
-    MyCollab attempts to bind to at startup.  To change this, open the file:
-
-       $MYCOLLAB_HOME/conf/mycollab.properties
-
-    and search for 'server.port'.  Change it to a port that isn't in use, and is
-    greater than 1024, as ports less than or equal to 1024 require superuser
-    access to bind under UNIX.
-
-    Restart MyCollab and you're in business.  Be sure that you replace the "8080"
-    in the URL you're using to access MyCollab.  For example, if you change the
-    port to 1979, you would request the URL http://localhost:1979/ in your
-    browser.
-
-(2) The 'localhost' machine isn't found.  This could happen if you're behind a
-    proxy.  If that's the case, make sure the proxy configuration for your
-    browser knows that you shouldn't be going through the proxy to access the
-    "localhost".
-
-    In Firefox, this is under Tools/Preferences -> Advanced/Network ->
-    Connection -> Settings..., and in Internet Explorer it is Tools ->
-    Internet Options -> Connections -> LAN Settings.
