@@ -44,19 +44,29 @@ Last changelog
 
 Version 4.5.2
 -----------------------------
+
+**New Features**
+
+* Make the new MyCollab installer for every platform: Windows, MacOS, Linux
+* Install MyCollab as window service
+* The new notification to remind user upload his avatar if he did not
+
 **Improvements**
 
 * Upgrade libraries versions
 * Tweak the error handling while init view
 * Refactor the file module management
-* Add more unit tests for crm, content, project services and use assertj instead of standard junit assert statements.
-* Revise the localization and date format associate to locale. It helps external developers can translate MyCollab to other languages easily.
+* Add more unit tests for crm, content, project services and use assertj instead of standard junit assert statements
+* Revise the localization and date format associate to locale. It helps external developers can translate MyCollab to other languages easily
+* Refactor the test module, using assertJ and JUnit TestRule instead of the custom JUnitClassRunner to make unit tests more flexible in enhancements
+* Minor bug fixes and new features for mobile
 
 **Bug Fixes**
 
 * Project Notification can not be sent in some special cases
 * Search time logging throws exception in several special input cases
 * Fix NPE exception when there is several options has null value
+* Minor bug fixes for file module
 
 Version 4.5.1
 -----------------------------
